@@ -7,6 +7,7 @@
 - fix handling of missing newline on last file map entry.
 - fix map entry lookup order (second try).
 - fix couple of comiler warnings.
+- fix reload init script option for Gentoo and Debian.
 
 26/1/2005 autofs-4.1.4_beta1
 ---------------------------
